--- a/WingMate_iOS/View Controllers/Upload Photo Video/Cells/Upload Photo Video Collection View Cell/UploadPhotoVideoCollectionViewCell.xib
+++ b/WingMate_iOS/View Controllers/Upload Photo Video/Cells/Upload Photo Video Collection View Cell/UploadPhotoVideoCollectionViewCell.xib
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baloo2-Bold.ttf">
+            <string>Baloo2-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -37,7 +43,7 @@
                         <rect key="frame" x="21.5" y="14" width="100" height="66"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wT-WJ-zQ6">
-                                <rect key="frame" x="15" y="40" width="70" height="26"/>
+                                <rect key="frame" x="15" y="40" width="70" height="35"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="22"/>
                                 <color key="textColor" name="RedThemeColor"/>
                                 <nil key="highlightedColor"/>
@@ -61,6 +67,29 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play-video" translatesAutoresizingMaskIntoConstraints="NO" id="ihJ-Ot-fV3">
                         <rect key="frame" x="43.5" y="35" width="56" height="56"/>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSq-zj-VL8">
+                        <rect key="frame" x="42.5" y="91" width="58" height="19"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5g-8m-tP7">
+                                <rect key="frame" x="6" y="2" width="46" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="R5g-8m-tP7" firstAttribute="top" secondItem="kSq-zj-VL8" secondAttribute="top" constant="2" id="2x3-Zg-hCt"/>
+                            <constraint firstItem="R5g-8m-tP7" firstAttribute="leading" secondItem="kSq-zj-VL8" secondAttribute="leading" constant="6" id="qRN-7n-fRI"/>
+                            <constraint firstAttribute="trailing" secondItem="R5g-8m-tP7" secondAttribute="trailing" constant="6" id="qYG-kk-Cs6"/>
+                            <constraint firstAttribute="bottom" secondItem="R5g-8m-tP7" secondAttribute="bottom" constant="2" id="wnK-dN-EmG"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="6"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  X  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0TL-WI-S4g" userLabel="X">
                         <rect key="frame" x="123" y="0.0" width="20" height="20"/>
                         <color key="backgroundColor" name="PurpleThemeColor"/>
@@ -95,6 +124,7 @@
                 <constraint firstAttribute="bottom" secondItem="A0f-a9-Nsc" secondAttribute="bottom" id="LYk-tG-RpZ"/>
                 <constraint firstItem="jUI-qe-dZt" firstAttribute="centerX" secondItem="A0f-a9-Nsc" secondAttribute="centerX" id="NCy-Ys-Gqu"/>
                 <constraint firstItem="A0f-a9-Nsc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="QF9-xn-zqI"/>
+                <constraint firstItem="kSq-zj-VL8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="SCx-aF-2B1"/>
                 <constraint firstAttribute="trailing" secondItem="A0f-a9-Nsc" secondAttribute="trailing" constant="8" id="SOI-GD-J4m"/>
                 <constraint firstItem="A0f-a9-Nsc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="aVH-Cy-8yv"/>
                 <constraint firstAttribute="trailing" secondItem="0TL-WI-S4g" secondAttribute="trailing" id="dAD-Th-jUu"/>
@@ -103,6 +133,7 @@
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="fVa-ZN-cJ3" secondAttribute="trailing" id="jb4-QL-iBU"/>
                 <constraint firstItem="0TL-WI-S4g" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="lwM-RS-OXh"/>
                 <constraint firstItem="jUI-qe-dZt" firstAttribute="centerY" secondItem="A0f-a9-Nsc" secondAttribute="centerY" id="mDZ-4X-D4g"/>
+                <constraint firstAttribute="bottom" secondItem="kSq-zj-VL8" secondAttribute="bottom" constant="8" id="neY-Ja-z8s"/>
             </constraints>
             <size key="customSize" width="143" height="118"/>
             <connections>
@@ -110,8 +141,10 @@
                 <outlet property="imageViewPhoto" destination="A0f-a9-Nsc" id="xV2-wQ-e0n"/>
                 <outlet property="imageViewPlay" destination="ihJ-Ot-fV3" id="IUf-Iw-0eZ"/>
                 <outlet property="labelCross" destination="0TL-WI-S4g" id="gyU-BL-6CR"/>
+                <outlet property="labelFileStatus" destination="R5g-8m-tP7" id="sKV-0k-qx9"/>
                 <outlet property="labelStaticTitle" destination="4wT-WJ-zQ6" id="Sij-dZ-olZ"/>
                 <outlet property="viewAddPhotos" destination="jUI-qe-dZt" id="i2Z-LD-GyW"/>
+                <outlet property="viewFileStatus" destination="kSq-zj-VL8" id="f1I-SC-yA8"/>
             </connections>
             <point key="canvasLocation" x="-21.014492753623191" y="98.4375"/>
         </collectionViewCell>
@@ -128,5 +161,8 @@
         <namedColor name="TextFieldBgColor">
             <color red="0.96100002527236938" green="0.96100002527236938" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
