--- a/WingMate_iOS/View Controllers/Upload Photo Video/Cells/Upload Photo Video Collection View Cell/UploadPhotoVideoCollectionViewCell.xib
+++ b/WingMate_iOS/View Controllers/Upload Photo Video/Cells/Upload Photo Video Collection View Cell/UploadPhotoVideoCollectionViewCell.xib
@@ -43,7 +43,7 @@
                         <rect key="frame" x="21.5" y="14" width="100" height="66"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wT-WJ-zQ6">
-                                <rect key="frame" x="15" y="40" width="70" height="35"/>
+                                <rect key="frame" x="15" y="40" width="70" height="26"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="22"/>
                                 <color key="textColor" name="RedThemeColor"/>
                                 <nil key="highlightedColor"/>
@@ -68,16 +68,16 @@
                         <rect key="frame" x="43.5" y="35" width="56" height="56"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSq-zj-VL8">
-                        <rect key="frame" x="42.5" y="91" width="58" height="19"/>
+                        <rect key="frame" x="46" y="94" width="51.5" height="16"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R5g-8m-tP7">
-                                <rect key="frame" x="6" y="2" width="46" height="15"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="6" y="2" width="39.5" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
                         <constraints>
                             <constraint firstItem="R5g-8m-tP7" firstAttribute="top" secondItem="kSq-zj-VL8" secondAttribute="top" constant="2" id="2x3-Zg-hCt"/>
                             <constraint firstItem="R5g-8m-tP7" firstAttribute="leading" secondItem="kSq-zj-VL8" secondAttribute="leading" constant="6" id="qRN-7n-fRI"/>
@@ -161,8 +161,8 @@
         <namedColor name="TextFieldBgColor">
             <color red="0.96100002527236938" green="0.96100002527236938" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
