--- a/WingMate_iOS/View Controllers/Upload Photo Video/UploadPhotoVideoVC.xib
+++ b/WingMate_iOS/View Controllers/Upload Photo Video/UploadPhotoVideoVC.xib
@@ -51,8 +51,8 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minimum 1 photo is required" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u94-1T-cl3">
-                    <rect key="frame" x="20" y="159.33333333333334" width="191.33333333333334" height="19.333333333333343"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minimum 1 photo is required" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u94-1T-cl3">
+                    <rect key="frame" x="20" y="159.33333333333334" width="374" height="19.333333333333343"/>
                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                     <color key="textColor" name="LabelGrayTextColor"/>
                     <nil key="highlightedColor"/>
@@ -231,6 +231,7 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="M4Z-65-OuM" firstAttribute="width" secondItem="3Ja-7Z-bDC" secondAttribute="width" id="3gT-zh-Ztb"/>
+                <constraint firstItem="hkJ-bi-8Ps" firstAttribute="trailing" secondItem="u94-1T-cl3" secondAttribute="trailing" constant="20" id="48E-d8-Ce3"/>
                 <constraint firstItem="wZz-N3-kJe" firstAttribute="leading" secondItem="hkJ-bi-8Ps" secondAttribute="leading" constant="20" id="5ZY-Ba-6hG"/>
                 <constraint firstItem="u94-1T-cl3" firstAttribute="top" secondItem="wZz-N3-kJe" secondAttribute="bottom" id="8cO-U0-jds"/>
                 <constraint firstItem="hkJ-bi-8Ps" firstAttribute="trailing" secondItem="e62-fw-mbR" secondAttribute="trailing" constant="14" id="E34-VC-tpm"/>
